--- a/MudBlazorWebApp4/MudBlazorWebApp4/Properties/launchSettings.json
+++ b/MudBlazorWebApp4/MudBlazorWebApp4/Properties/launchSettings.json
@@ -7,6 +7,7 @@
         "launchBrowser": true,
         "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
         "applicationUrl": "http://localhost:5007",
+        "launchUrl": "MudBlazorWebApp4",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
@@ -17,6 +18,7 @@
         "launchBrowser": true,
         "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
         "applicationUrl": "https://localhost:7245;http://localhost:5007",
+        "launchUrl": "MudBlazorWebApp4",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
         }
